--- a/style.css
+++ b/style.css
@@ -85,5 +85,8 @@ div.questions p {
 }
 
 div.questions a.btn {
-  
+  border-radius: 5px;
+  color: #FFF;
+  background-color: #007bff;
+  border-color: #007bff;
 }
