--- a/style.css
+++ b/style.css
@@ -98,3 +98,8 @@ div.questions a.btn:hover {
   background-color: #0069d9;
   border-color: #0069d9;
 }
+
+footer {
+  border: 1px solid #CCC;
+  margin-top: 80px;
+}
