--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ div.questions a.btn:hover {
 }
 
 footer {
-  border-top: : 1px solid #CCC;
+  border-top: : 1px;
   margin-top: 80px;
   padding-top: 20px;
   color: #CCC;
